Header & footer ready

--- a/Project/css/scss/standarts/_variables.scss
+++ b/Project/css/scss/standarts/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $main: #f5f5f5;
 $secondary: #161513;
 $additional: #e94d35;
+$yellow: #969186;
 
 // breakpoints
 $mobile: 576px; //breakpoint-sm
