--- a/Project/css/scss/page/_footer.scss
+++ b/Project/css/scss/page/_footer.scss
@@ -1,13 +1,20 @@
 .footer {
-	min-height: 220px;
+	min-height: auto;
 	background-color: $secondary;
 	color: $white;
+
 	.container {
+		height: 100%;
 		display: flex;
 		flex-direction: column;
-		justify-content: flex-start;
+		justify-content: center;
 		align-items: center;
 		padding: 70px 0 35px 0;
+		gap: 50px;
+		@media (max-width: $mobile-max) {
+			padding: 20px 0;
+			gap: 20px;
+		}
 	}
 	&__row {
 		display: flex;
@@ -16,5 +23,54 @@
 		align-items: center;
 
 		width: 100%;
+		@media (max-width: $mobile-max) {
+			flex-direction: column;
+			gap: 15px;
+			&.sec {
+				flex-direction: column-reverse;
+			}
+		}
+	}
+	&__col {
+		text-align: center;
+		padding: 5px;
+	}
+	&__links {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		column-gap: 45px;
+		row-gap: 15px;
+		@media (max-width: $mobile-max) {
+			flex-direction: column;
+		}
+	}
+	&__social {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 15px;
+		&-item {
+			border-radius: 24px;
+			border: 1px solid $yellow;
+			width: 40px;
+			height: 40px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			transition: 0.3s all ease-in-out;
+			&:hover {
+				border: none;
+			}
+			&.inst:hover {
+				box-shadow: inset 0 0 20px #ff00fb, 0 0 10px #ff00fb;
+			}
+			&.twit:hover {
+				box-shadow: inset 0 0 20px #00b7ff, 0 0 10px #00b7ff;
+			}
+			&.link:hover {
+				box-shadow: inset 0 0 20px #034e9e, 0 0 10px #034e9e;
+			}
+		}
 	}
 }
