--- a/Project/css/scss/page/_header.scss
+++ b/Project/css/scss/page/_header.scss
@@ -1,5 +1,15 @@
 .header {
 	min-height: 96px;
+	transition: 0.3s background-color, color ease-in-out;
+	background-color: $main;
+	position: fixed;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	left: 0;
+	top: 0;
+	z-index: 999;
 	.container {
 		min-height: 100%;
 		display: flex;
@@ -8,6 +18,49 @@
 		align-items: center;
 	}
 
+	&.scrolled {
+		transition: 0.3s background-color, color, border ease-in-out;
+		background-color: #0008;
+		backdrop-filter: blur(5px);
+		color: $white;
+		.header__navigate {
+			@media (max-width: $tablet-max) {
+				backdrop-filter: blur(5px);
+			}
+			.header__navigate-item {
+				a {
+					&::after {
+						content: "";
+						display: block;
+						width: 100%;
+						height: 1px;
+						background-color: $white;
+						transition: 0.3s all ease-in-out;
+
+						@media (max-width: $tablet-max) {
+							display: none;
+						}
+					}
+					&:hover {
+						&::after {
+							background-color: $additional;
+							height: 1px;
+						}
+					}
+				}
+			}
+		}
+
+		.header__button {
+			border: 1px solid $white;
+			transition: 0.3s all ease-in-out;
+			&:hover {
+				background-color: $white;
+				color: $secondary;
+				box-shadow: 0px 0px 10px $white;
+			}
+		}
+	}
 	.logo {
 		a {
 			display: flex;
@@ -29,6 +82,26 @@
 			font-size: 24px;
 			line-height: 0;
 			font-weight: 700;
+			transition: 0.2s all ease;
+		}
+	}
+	&__navigate-icon {
+		display: none;
+		.navigate-icon__line {
+			width: 100%;
+			height: 2px;
+			background-color: $additional;
+		}
+		@media (max-width: $tablet-max) {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			align-items: center;
+			flex: 0 0 auto;
+			width: 36px;
+			height: 20px;
+			order: 3;
+			margin: 0 25px 0 0;
 		}
 	}
 	&__navigate {
@@ -38,44 +111,51 @@
 		align-items: center;
 		gap: 5px;
 		flex: 0 1 250px;
-		&-icon {
-			display: none;
 
-			height: 24px;
-			width: 20px;
-			.navigate-icon__line {
-				height: 2px;
-				background-color: $secondary;
-				line-height: 0;
-				&::before,
-				&::after {
-					content: "";
-					display: block;
-					width: 100%;
-					height: 2px;
-					background-color: $secondary;
-				}
-			}
-			@media (max-width: $tablet-max) {
-				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
-				align-items: center;
-			}
+		@media (max-width: $tablet-max) {
+			position: fixed;
+			left: -100vw;
+			top: 0;
+			width: 100vw;
+			height: 100vh;
+			transition: 0.5s all ease-in-out;
+			flex-direction: column;
+			justify-content: center;
+			row-gap: 15px;
+			z-index: -1;
+			background-color: #000a;
+			backdrop-filter: blur(5px);
 			&._active {
+				left: 0;
 			}
 		}
 		&-item {
 			a {
 				display: inline-block;
 				font-size: 16px;
+				&::after {
+					content: "";
+					height: 1px;
+					width: 100%;
+					display: block;
+					background-color: $secondary;
+					transition: 0.3s all ease-in-out;
+				}
+				&:hover {
+					&::after {
+						height: 2px;
+						background-color: $additional;
+					}
+				}
 			}
-			a::after {
-				content: "";
-				height: 1px;
-				width: 100%;
-				display: block;
-				background-color: $secondary;
+			@media (max-width: $tablet-max) {
+				color: $white;
+				a {
+					font-size: 28px;
+				}
+				a::after {
+					display: none;
+				}
 			}
 		}
 	}
@@ -83,5 +163,14 @@
 		display: inline-block;
 		padding: 10px 24px;
 		border: 1px solid $secondary;
+		transition: 0.3s all ease-in-out;
+		&:hover {
+			background-color: $secondary;
+			color: $white;
+			box-shadow: 0px 0px 10px $additional;
+		}
+		@media (max-width: $mobile-max) {
+			display: none;
+		}
 	}
 }
