--- a/Project/css/scss/standarts/_for-all.scss
+++ b/Project/css/scss/standarts/_for-all.scss
@@ -4,6 +4,10 @@ body {
 	background-color: $main;
 	font-family: "Bai Jamjuree", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
 		Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	color: $secondary;
+	&._active {
+		overflow: hidden;
+	}
 }
 
 .wrapper {
@@ -13,6 +17,7 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+	position: relative;
 }
 
 .header {
