--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -46,6 +46,10 @@ img {
 body {
   background-color: #f5f5f5;
   font-family: "Bai Jamjuree", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #161513;
+}
+body._active {
+  overflow: hidden;
 }
 
 .wrapper {
@@ -55,6 +59,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .header {
@@ -71,6 +76,16 @@ body {
 
 .header {
   min-height: 96px;
+  transition: 0.3s background-color, color ease-in-out;
+  background-color: #f5f5f5;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  left: 0;
+  top: 0;
+  z-index: 999;
 }
 .header .container {
   min-height: 100%;
@@ -78,6 +93,45 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+.header.scrolled {
+  transition: 0.3s background-color, color, border ease-in-out;
+  background-color: rgba(0, 0, 0, 0.5333333333);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .header.scrolled .header__navigate {
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+  }
+}
+.header.scrolled .header__navigate .header__navigate-item a::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+  transition: 0.3s all ease-in-out;
+}
+@media (max-width: 767px) {
+  .header.scrolled .header__navigate .header__navigate-item a::after {
+    display: none;
+  }
+}
+.header.scrolled .header__navigate .header__navigate-item a:hover::after {
+  background-color: #e94d35;
+  height: 1px;
+}
+.header.scrolled .header__button {
+  border: 1px solid #fff;
+  transition: 0.3s all ease-in-out;
+}
+.header.scrolled .header__button:hover {
+  background-color: #fff;
+  color: #161513;
+  box-shadow: 0px 0px 10px #fff;
 }
 .header .logo a {
   display: flex;
@@ -100,6 +154,28 @@ body {
   font-size: 24px;
   line-height: 0;
   font-weight: 700;
+  transition: 0.2s all ease;
+}
+.header__navigate-icon {
+  display: none;
+}
+.header__navigate-icon .navigate-icon__line {
+  width: 100%;
+  height: 2px;
+  background-color: #e94d35;
+}
+@media (max-width: 767px) {
+  .header__navigate-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex: 0 0 auto;
+    width: 36px;
+    height: 20px;
+    order: 3;
+    margin: 0 25px 0 0;
+  }
 }
 .header__navigate {
   display: flex;
@@ -109,29 +185,24 @@ body {
   gap: 5px;
   flex: 0 1 250px;
 }
-.header__navigate-icon {
-  display: none;
-  height: 24px;
-  width: 20px;
-}
-.header__navigate-icon .navigate-icon__line {
-  height: 2px;
-  background-color: #161513;
-  line-height: 0;
-}
-.header__navigate-icon .navigate-icon__line::before, .header__navigate-icon .navigate-icon__line::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #161513;
-}
 @media (max-width: 767px) {
-  .header__navigate-icon {
-    display: flex;
+  .header__navigate {
+    position: fixed;
+    left: -100vw;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    transition: 0.5s all ease-in-out;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+    row-gap: 15px;
+    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.6666666667);
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+  }
+  .header__navigate._active {
+    left: 0;
   }
 }
 .header__navigate-item a {
@@ -144,24 +215,59 @@ body {
   width: 100%;
   display: block;
   background-color: #161513;
+  transition: 0.3s all ease-in-out;
+}
+.header__navigate-item a:hover::after {
+  height: 2px;
+  background-color: #e94d35;
+}
+@media (max-width: 767px) {
+  .header__navigate-item {
+    color: #fff;
+  }
+  .header__navigate-item a {
+    font-size: 28px;
+  }
+  .header__navigate-item a::after {
+    display: none;
+  }
 }
 .header__button {
   display: inline-block;
   padding: 10px 24px;
   border: 1px solid #161513;
+  transition: 0.3s all ease-in-out;
+}
+.header__button:hover {
+  background-color: #161513;
+  color: #fff;
+  box-shadow: 0px 0px 10px #e94d35;
+}
+@media (max-width: 575px) {
+  .header__button {
+    display: none;
+  }
 }
 
 .footer {
-  min-height: 220px;
+  min-height: auto;
   background-color: #161513;
   color: #fff;
 }
 .footer .container {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   padding: 70px 0 35px 0;
+  gap: 50px;
+}
+@media (max-width: 575px) {
+  .footer .container {
+    padding: 20px 0;
+    gap: 20px;
+  }
 }
 .footer__row {
   display: flex;
@@ -169,4 +275,162 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+@media (max-width: 575px) {
+  .footer__row {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .footer__row.sec {
+    flex-direction: column-reverse;
+  }
+}
+.footer__col {
+  text-align: center;
+  padding: 5px;
+}
+.footer__links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 45px;
+       column-gap: 45px;
+  row-gap: 15px;
+}
+@media (max-width: 575px) {
+  .footer__links {
+    flex-direction: column;
+  }
+}
+.footer__social {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+.footer__social-item {
+  border-radius: 24px;
+  border: 1px solid #969186;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s all ease-in-out;
+}
+.footer__social-item:hover {
+  border: none;
+}
+.footer__social-item.inst:hover {
+  box-shadow: inset 0 0 20px #ff00fb, 0 0 10px #ff00fb;
+}
+.footer__social-item.twit:hover {
+  box-shadow: inset 0 0 20px #00b7ff, 0 0 10px #00b7ff;
+}
+.footer__social-item.link:hover {
+  box-shadow: inset 0 0 20px #034e9e, 0 0 10px #034e9e;
+}
+
+.main {
+  margin: 100px 0 0 0;
+}
+.main .welcome {
+  min-height: auto;
+}
+.main .welcome .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main .welcome__info {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+.main .welcome__title {
+  text-transform: uppercase;
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: 0.56px;
+}
+.main .welcome__title img {
+  width: 40px;
+  height: 40px;
+  margin: 0 0.25em 0 0;
+}
+.main .welcome__subtitle {
+  display: flex;
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 0.48px;
+  gap: 15px;
+  text-transform: uppercase;
+}
+.main .welcome__link {
+  display: flex;
+  align-items: center;
+}
+.main .welcome__link-label {
+  border: 1px solid #161513;
+  background-color: #161513;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 12px 30px;
+}
+.main .welcome__link-label.btn {
+  border-radius: 0;
+  color: #161513;
+  background-color: transparent;
+  transition: 0.3s background-color, color ease-in-out;
+}
+.main .welcome__link-label.btn:hover {
+  background-color: #e94d35;
+  border: 1px solid #e94d35;
+  color: #fff;
+}
+.main .line {
+  min-height: 300px;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.main .line__item {
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.main .line__item img {
+  margin: 0 0 0 10px;
+}
+.main .line__content {
+  background-color: #161513;
+  color: #fff;
+  min-height: 50px;
+  width: 102vw;
+  min-width: 1199px;
+  padding: 0 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transform: rotate(-5deg);
+}
+.main .block .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.main .block__title {
+  font-size: 45px;
+  line-height: 56px;
+  letter-spacing: 1.44px;
+  margin: 20px 0;
+}
+.main .block__subtitle {
+  text-transform: uppercase;
+  font-size: 18px;
 }
