--- a/Project/css/scss/page/_header.scss
+++ b/Project/css/scss/page/_header.scss
@@ -1,7 +1,7 @@
 .header {
 	min-height: 96px;
 	transition: 0.3s background-color, color ease-in-out;
-	background-color: $main;
+	background-color: #0000;
 	position: fixed;
 	display: flex;
 	flex-direction: row;
@@ -16,6 +16,9 @@
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
+	}
+	@media (max-width: $mobile-max) {
+		min-height: 60px;
 	}
 
 	&.scrolled {
@@ -169,7 +172,7 @@
 			color: $white;
 			box-shadow: 0px 0px 10px $additional;
 		}
-		@media (max-width: $mobile-max) {
+		@media (max-width: $tablet-max) {
 			display: none;
 		}
 	}
