--- a/Project/css/scss/page/_main.scss
+++ b/Project/css/scss/page/_main.scss
@@ -1,11 +1,19 @@
 .main {
 	margin: 100px 0 0 0;
+	position: relative;
+
 	.welcome {
 		min-height: auto;
+		margin: 0 0 30px 0;
 		.container {
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
+			gap: 30px;
+			@media (max-width: $laptop-max) {
+				flex-direction: column-reverse;
+				padding: 0 15px;
+			}
 		}
 		&__info {
 			display: flex;
@@ -19,8 +27,31 @@
 			letter-spacing: 0.56px;
 			img {
 				width: 40px;
-				height: 40px;
+				height: inherit;
 				margin: 0 0.25em 0 0;
+			}
+			@media (max-width: $large) {
+				font-size: 46px;
+				line-height: 56px;
+			}
+			@media (max-width: $laptop-max) {
+				font-size: 40px;
+				line-height: 48px;
+			}
+			@media (max-width: $tablet-max) {
+				font-size: 32px;
+				line-height: 40px;
+				img {
+					width: 26px;
+				}
+			}
+			@media (max-width: $mobile-max) {
+				font-size: 24px;
+				line-height: 30px;
+				img {
+					width: 20px;
+					height: inherit;
+				}
 			}
 		}
 		&__subtitle {
@@ -30,10 +61,18 @@
 			letter-spacing: 0.48px;
 			gap: 15px;
 			text-transform: uppercase;
+			@media (max-width: $tablet-max) {
+				gap: 5px;
+				font-size: 14px;
+				img {
+					width: 16px;
+				}
+			}
 		}
 		&__link {
 			display: flex;
 			align-items: center;
+
 			&-label {
 				border: 1px solid $secondary;
 				background-color: $secondary;
@@ -53,7 +92,13 @@
 						color: $white;
 					}
 				}
+				@media (max-width: $tablet-max) {
+					font-size: 14px;
+				}
 			}
+		}
+		&__photo {
+			max-width: 550px;
 		}
 	}
 	.line {
@@ -65,13 +110,20 @@
 		align-items: center;
 		position: relative;
 		&__item {
+			position: relative;
+			overflow: hidden;
 			text-transform: uppercase;
+			flex-wrap: wrap;
 			font-size: 18px;
 			img {
 				margin: 0 0 0 10px;
 			}
+			@media (max-width: $desktop-max) {
+				font-size: 16px;
+			}
 		}
 		&__content {
+			position: absolute;
 			background-color: $secondary;
 			color: $white;
 			min-height: 50px;
@@ -83,6 +135,146 @@
 			align-items: center;
 			transform: rotate(-5deg);
 		}
+		@media (max-width: $tablet-max) {
+			min-height: 200px;
+		}
+		@media (max-width: $mobile-max) {
+			min-height: 150px;
+		}
+	}
+	.portfolio {
+		margin: 60px 0 0 0;
+		.container {
+			display: flex;
+			justify-content: space-evenly;
+			align-items: flex-start;
+			gap: 20px;
+			@media (max-width: $laptop-max) {
+				flex-direction: column;
+			}
+		}
+		&__heading {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+			flex: 0 0 auto;
+			row-gap: 20px;
+			max-width: 420px;
+			@media (max-width: $laptop-max) {
+				max-width: 100%;
+			}
+			&-name {
+				display: flex;
+				align-items: center;
+				column-gap: 10px;
+			}
+			&-text {
+				text-transform: uppercase;
+			}
+			&-title {
+				font-size: 56px;
+				line-height: 64px;
+				letter-spacing: 0.56px;
+				@media (max-width: $tablet-max) {
+					font-size: 46px;
+					line-height: 54px;
+				}
+			}
+		}
+		&__body {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+			max-width: 600px;
+			@media (max-width: $laptop-max) {
+				max-width: 100%;
+			}
+
+			&-title {
+				font-size: 30px;
+				line-height: 40px;
+				letter-spacing: 0.64px;
+				@media (max-width: $tablet-max) {
+					font-size: 24px;
+					line-height: 32px;
+				}
+			}
+			&-subtitle {
+				font-size: 18px;
+				line-height: 32px;
+				margin: 35px 0 25px 0;
+				@media (max-width: $tablet-max) {
+					font-size: 16px;
+					line-height: 28px;
+				}
+			}
+			&-info {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				flex-wrap: wrap;
+				gap: 15px;
+				width: 100%;
+				@media (max-width: $tablet-max) {
+					column-gap: 40px;
+					justify-content: center;
+				}
+			}
+			&-item {
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-start;
+				align-items: flex-start;
+				row-gap: 10px;
+				&-title {
+					text-transform: uppercase;
+					color: $additional;
+				}
+				&-body {
+					font-size: 22px;
+				}
+			}
+		}
+		&-next {
+			margin: 120px 0;
+			.container {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				align-items: center;
+				@media (max-width: $tablet-max) {
+					flex-direction: column;
+				}
+			}
+			&__block {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				gap: 10px;
+				flex: 1 1 auto;
+				border: 1px solid $secondary;
+				padding: 22px;
+				&.black {
+					background-color: $secondary;
+					color: $white;
+				}
+				@media (max-width: $tablet-max) {
+					width: 100%;
+					flex-direction: row;
+					gap: 10px;
+					justify-content: space-between;
+				}
+			}
+			&__title {
+				font-size: 56px;
+			}
+			&__subtitle {
+				text-transform: uppercase;
+			}
+		}
 	}
 	.block {
 		.container {
@@ -90,16 +282,421 @@
 			flex-direction: column;
 			justify-content: flex-start;
 			align-items: center;
+			flex-wrap: wrap;
+		}
+		&__star {
+			width: 40px;
+			height: 40px;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
 		}
 		&__title {
 			font-size: 45px;
 			line-height: 56px;
 			letter-spacing: 1.44px;
 			margin: 20px 0;
+			@media (max-width: $tablet-max) {
+				font-size: 36px;
+			}
 		}
 		&__subtitle {
 			text-transform: uppercase;
 			font-size: 18px;
+			@media (max-width: $tablet-max) {
+				font-size: 16px;
+			}
+		}
+		&__body {
+			padding: 60px 0 120px;
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			flex-direction: column;
+			width: 100%;
+			position: relative;
+			&.awards {
+				display: flex;
+				flex-direction: column;
+				gap: 25px;
+				width: 100%;
+				.awards {
+					&__item {
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						padding: 45px 35px;
+						border: 1px solid $secondary;
+						width: 100%;
+						transition: 0.1s all ease-in-out;
+						&-block {
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							gap: 25px;
+							@media (max-width: $tablet-max) {
+								gap: 10px;
+								&.date {
+									flex-direction: column;
+									align-items: flex-end;
+								}
+							}
+							@media (max-width: $mobile-max) {
+								&.date {
+									display: none;
+								}
+							}
+						}
+						@media (max-width: $tablet-max) {
+							padding: 35px 20px;
+						}
+						&-number {
+							flex: 0 0 auto;
+							width: 48px;
+							height: 48px;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+							background-color: $additional;
+							color: $white;
+						}
+						&-title {
+							font-size: 24px;
+							@media (max-width: $tablet-max) {
+								font-size: 20px;
+							}
+						}
+						&-subtitle {
+							font-size: 18px;
+							@media (max-width: $tablet-max) {
+								font-size: 16px;
+							}
+						}
+						&:hover {
+							box-shadow: 0 0 20px $additional inset;
+						}
+					}
+				}
+			}
+			&.portfolio {
+				max-width: 100%;
+
+				gap: 90px;
+				.portfolio {
+					&__row {
+						display: flex;
+						flex-direction: row;
+						justify-content: flex-start;
+						align-items: center;
+						width: 100%;
+						gap: 40px;
+						&.img-right {
+							flex-direction: row-reverse;
+							justify-content: space-between;
+						}
+						@media (max-width: $laptop-max) {
+							flex-direction: column-reverse !important;
+						}
+					}
+					&__col {
+						flex: 0 1 auto;
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						align-items: flex-start;
+						max-width: 510px;
+						width: 100%;
+						min-width: 100px;
+						&.img {
+							flex: 0 1 auto;
+							width: 460px;
+							height: 300px;
+							overflow: hidden;
+							img {
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+							}
+							@media (max-width: $laptop-max) {
+								width: 100% !important;
+								height: inherit;
+								max-width: 450px !important;
+								flex: 1 1 auto;
+								width: 90vw;
+							}
+							@media (max-width: $mobile-max) {
+								img {
+								}
+							}
+						}
+						@media (max-width: $laptop-max) {
+							align-items: center;
+							max-width: none;
+							flex: 1 1 auto;
+							display: flex;
+							flex-direction: column;
+						}
+					}
+					&__class {
+						padding: 5px 10px;
+						background-color: $additional;
+						text-transform: uppercase;
+						color: $white;
+						display: inline-block;
+					}
+					&__title {
+						font-size: 45px;
+						line-height: 56px;
+						letter-spacing: 1.44px;
+						margin: 20px 0 40px 0;
+						@media (max-width: $laptop-max) {
+							text-align: center;
+						}
+						@media (max-width: $mobile-max) {
+							font-size: 36px;
+						}
+					}
+				}
+			}
+			&.services {
+				display: flex;
+				flex-direction: row;
+				flex-wrap: wrap;
+				justify-content: center;
+				align-items: center;
+				flex-wrap: wrap;
+				gap: 40px;
+				.services {
+					&__item {
+						display: flex;
+						flex-direction: column;
+						justify-content: flex-start;
+						align-items: flex-start;
+						gap: 25px;
+						flex: 0 1 auto;
+						max-width: 600px;
+						width: 100%;
+						padding: 35px;
+						border: 1px solid $secondary;
+						transition: 0.1s all ease-in-out;
+						&:hover {
+							box-shadow: 0 0 20px $additional inset;
+						}
+					}
+					&__title {
+						font-size: 30px;
+						line-height: 40px;
+						letter-spacing: 0.64px;
+					}
+					&__body {
+						font-size: 18px;
+						line-height: 32px;
+						letter-spacing: 0.64px;
+						@media (max-width: $tablet-max) {
+							font-size: 16px;
+							line-height: 24px;
+						}
+					}
+				}
+			}
+			&.customers {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				align-items: center;
+				flex-wrap: wrap;
+				gap: 30px;
+				.customers {
+					&__item {
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						align-items: center;
+						gap: 25px;
+						flex: 0 1 auto;
+						max-width: 240px;
+						width: 100%;
+						padding: 35px;
+						border: 1px solid $secondary;
+						transition: 0.1s all ease-in-out;
+						&:hover {
+							box-shadow: 0 0 20px $additional inset;
+						}
+					}
+				}
+			}
+			&.articles {
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-start;
+				align-items: center;
+				gap: 100px;
+				width: 100%;
+				position: relative;
+				.articles {
+					&__row {
+						display: flex;
+						flex-direction: row;
+						justify-content: space-between;
+						align-items: center;
+						gap: 5px 60px;
+						width: 100%;
+						padding: 10px 30px;
+						border: 1px solid $secondary;
+						transition: 0.2s all ease-in-out;
+						&:hover {
+							box-shadow: 0 0 15px $additional inset;
+						}
+						@media (max-width: $laptop-max) {
+							flex-direction: column;
+						}
+					}
+					&__col {
+						flex: 1 1 auto;
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						align-items: flex-start;
+						max-width: 500px;
+						line-height: 24px;
+						&.left {
+							flex: 1 0 auto;
+						}
+					}
+					&__design-date {
+						display: flex;
+						flex-direction: row;
+						justify-content: flex-start;
+						align-items: center;
+						color: $additional;
+						gap: 15px;
+						@media (max-width: $mobile-max) {
+							gap: 5px;
+							font-size: 0.8em;
+						}
+					}
+					&__item {
+						text-transform: uppercase;
+					}
+					&__title {
+						font-size: 24px;
+						line-height: 32px;
+						letter-spacing: 0.48px;
+						@media (max-width: $laptop-max) {
+							flex-direction: column;
+						}
+					}
+					&__button {
+						flex: 1 0 auto;
+
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						width: 100%;
+						background-color: $secondary;
+						color: $white;
+						transition: 0.3s all ease-in-out;
+						min-height: 60px;
+						border: none;
+						&:hover {
+							background-color: $additional;
+						}
+					}
+				}
+			}
+		}
+		&.subscribe {
+			min-height: 180px;
+			background-color: #e6e3de;
+			.container {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+				align-items: center;
+				min-height: 180px;
+				padding: 15px 0;
+				@media (max-width: $tablet-max) {
+					flex-direction: column;
+					align-items: center;
+				}
+			}
+			.subscribe {
+				&__col {
+					display: flex;
+					justify-content: flex-start;
+					align-items: center;
+					gap: 10px 25px;
+					font-size: 24px;
+					line-height: 32px;
+					letter-spacing: 0.48px;
+					transition: 0.3s all ease-in-out;
+
+					input[type="text"] {
+						border: 1px solid $secondary;
+						flex: 0 0 auto;
+						background-color: transparent;
+						height: 56px;
+						padding: 0 15px;
+						max-width: 350px;
+						width: 100%;
+						&:focus {
+							outline: none;
+							&::placeholder {
+								color: #0002;
+							}
+						}
+						&::placeholder {
+							transition: 0.3s all ease-in-out;
+							color: $secondary;
+						}
+						@media (max-width: $tablet-max) {
+							flex: 0 1 auto;
+							max-width: 100%;
+						}
+					}
+					@media (max-width: $tablet-max) {
+						flex-wrap: wrap;
+						align-items: center;
+						padding: 15px;
+					}
+				}
+				&__btn {
+					border: none;
+					background-color: $secondary;
+					color: $white;
+					height: 56px;
+					padding: 0 15px;
+					transition: 0.3s all ease-in-out;
+					&:hover {
+						background-color: $additional;
+					}
+					@media (max-width: $tablet-max) {
+						width: 100%;
+					}
+				}
+			}
+		}
+		&.articles {
+			overflow: hidden;
+			position: relative;
+		}
+		.articles__star {
+			position: absolute;
+			bottom: 250px;
+			right: -130px;
+			width: 240px;
+			height: 240px;
+			z-index: -1;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+			@media (max-width: $tablet-max) {
+				display: none;
+			}
 		}
 	}
 }
