--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -77,7 +77,7 @@ body._active {
 .header {
   min-height: 96px;
   transition: 0.3s background-color, color ease-in-out;
-  background-color: #f5f5f5;
+  background-color: rgba(0, 0, 0, 0);
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -93,6 +93,11 @@ body._active {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+@media (max-width: 575px) {
+  .header {
+    min-height: 60px;
+  }
 }
 .header.scrolled {
   transition: 0.3s background-color, color, border ease-in-out;
@@ -243,7 +248,7 @@ body._active {
   color: #fff;
   box-shadow: 0px 0px 10px #e94d35;
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
   .header__button {
     display: none;
   }
@@ -253,6 +258,7 @@ body._active {
   min-height: auto;
   background-color: #161513;
   color: #fff;
+  width: 100%;
 }
 .footer .container {
   height: 100%;
@@ -297,6 +303,9 @@ body._active {
        column-gap: 45px;
   row-gap: 15px;
 }
+.footer__links-item a:hover {
+  text-shadow: 0 0 5px #fff;
+}
 @media (max-width: 575px) {
   .footer__links {
     flex-direction: column;
@@ -333,14 +342,23 @@ body._active {
 
 .main {
   margin: 100px 0 0 0;
+  position: relative;
 }
 .main .welcome {
   min-height: auto;
+  margin: 0 0 30px 0;
 }
 .main .welcome .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 30px;
+}
+@media (max-width: 991px) {
+  .main .welcome .container {
+    flex-direction: column-reverse;
+    padding: 0 15px;
+  }
 }
 .main .welcome__info {
   display: flex;
@@ -355,8 +373,39 @@ body._active {
 }
 .main .welcome__title img {
   width: 40px;
-  height: 40px;
+  height: inherit;
   margin: 0 0.25em 0 0;
+}
+@media (max-width: 1400px) {
+  .main .welcome__title {
+    font-size: 46px;
+    line-height: 56px;
+  }
+}
+@media (max-width: 991px) {
+  .main .welcome__title {
+    font-size: 40px;
+    line-height: 48px;
+  }
+}
+@media (max-width: 767px) {
+  .main .welcome__title {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .main .welcome__title img {
+    width: 26px;
+  }
+}
+@media (max-width: 575px) {
+  .main .welcome__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .main .welcome__title img {
+    width: 20px;
+    height: inherit;
+  }
 }
 .main .welcome__subtitle {
   display: flex;
@@ -365,6 +414,15 @@ body._active {
   letter-spacing: 0.48px;
   gap: 15px;
   text-transform: uppercase;
+}
+@media (max-width: 767px) {
+  .main .welcome__subtitle {
+    gap: 5px;
+    font-size: 14px;
+  }
+  .main .welcome__subtitle img {
+    width: 16px;
+  }
 }
 .main .welcome__link {
   display: flex;
@@ -390,6 +448,14 @@ body._active {
   border: 1px solid #e94d35;
   color: #fff;
 }
+@media (max-width: 767px) {
+  .main .welcome__link-label {
+    font-size: 14px;
+  }
+}
+.main .welcome__photo {
+  max-width: 550px;
+}
 .main .line {
   min-height: 300px;
   width: 100%;
@@ -400,13 +466,22 @@ body._active {
   position: relative;
 }
 .main .line__item {
+  position: relative;
+  overflow: hidden;
   text-transform: uppercase;
+  flex-wrap: wrap;
   font-size: 18px;
 }
 .main .line__item img {
   margin: 0 0 0 10px;
 }
+@media (max-width: 1199px) {
+  .main .line__item {
+    font-size: 16px;
+  }
+}
 .main .line__content {
+  position: absolute;
   background-color: #161513;
   color: #fff;
   min-height: 50px;
@@ -418,11 +493,185 @@ body._active {
   align-items: center;
   transform: rotate(-5deg);
 }
+@media (max-width: 767px) {
+  .main .line {
+    min-height: 200px;
+  }
+}
+@media (max-width: 575px) {
+  .main .line {
+    min-height: 150px;
+  }
+}
+.main .portfolio {
+  margin: 60px 0 0 0;
+}
+.main .portfolio .container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  gap: 20px;
+}
+@media (max-width: 991px) {
+  .main .portfolio .container {
+    flex-direction: column;
+  }
+}
+.main .portfolio__heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex: 0 0 auto;
+  row-gap: 20px;
+  max-width: 420px;
+}
+@media (max-width: 991px) {
+  .main .portfolio__heading {
+    max-width: 100%;
+  }
+}
+.main .portfolio__heading-name {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.main .portfolio__heading-text {
+  text-transform: uppercase;
+}
+.main .portfolio__heading-title {
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: 0.56px;
+}
+@media (max-width: 767px) {
+  .main .portfolio__heading-title {
+    font-size: 46px;
+    line-height: 54px;
+  }
+}
+.main .portfolio__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  max-width: 600px;
+}
+@media (max-width: 991px) {
+  .main .portfolio__body {
+    max-width: 100%;
+  }
+}
+.main .portfolio__body-title {
+  font-size: 30px;
+  line-height: 40px;
+  letter-spacing: 0.64px;
+}
+@media (max-width: 767px) {
+  .main .portfolio__body-title {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+.main .portfolio__body-subtitle {
+  font-size: 18px;
+  line-height: 32px;
+  margin: 35px 0 25px 0;
+}
+@media (max-width: 767px) {
+  .main .portfolio__body-subtitle {
+    font-size: 16px;
+    line-height: 28px;
+  }
+}
+.main .portfolio__body-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .main .portfolio__body-info {
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+    justify-content: center;
+  }
+}
+.main .portfolio__body-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  row-gap: 10px;
+}
+.main .portfolio__body-item-title {
+  text-transform: uppercase;
+  color: #e94d35;
+}
+.main .portfolio__body-item-body {
+  font-size: 22px;
+}
+.main .portfolio-next {
+  margin: 120px 0;
+}
+.main .portfolio-next .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .main .portfolio-next .container {
+    flex-direction: column;
+  }
+}
+.main .portfolio-next__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex: 1 1 auto;
+  border: 1px solid #161513;
+  padding: 22px;
+}
+.main .portfolio-next__block.black {
+  background-color: #161513;
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .main .portfolio-next__block {
+    width: 100%;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
+  }
+}
+.main .portfolio-next__title {
+  font-size: 56px;
+}
+.main .portfolio-next__subtitle {
+  text-transform: uppercase;
+}
 .main .block .container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
+}
+.main .block__star {
+  width: 40px;
+  height: 40px;
+}
+.main .block__star img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .main .block__title {
   font-size: 45px;
@@ -430,7 +679,433 @@ body._active {
   letter-spacing: 1.44px;
   margin: 20px 0;
 }
+@media (max-width: 767px) {
+  .main .block__title {
+    font-size: 36px;
+  }
+}
 .main .block__subtitle {
   text-transform: uppercase;
   font-size: 18px;
+}
+@media (max-width: 767px) {
+  .main .block__subtitle {
+    font-size: 16px;
+  }
+}
+.main .block__body {
+  padding: 60px 0 120px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+}
+.main .block__body.awards {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  width: 100%;
+}
+.main .block__body.awards .awards__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 45px 35px;
+  border: 1px solid #161513;
+  width: 100%;
+  transition: 0.1s all ease-in-out;
+}
+.main .block__body.awards .awards__item-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+@media (max-width: 767px) {
+  .main .block__body.awards .awards__item-block {
+    gap: 10px;
+  }
+  .main .block__body.awards .awards__item-block.date {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+@media (max-width: 575px) {
+  .main .block__body.awards .awards__item-block.date {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  .main .block__body.awards .awards__item {
+    padding: 35px 20px;
+  }
+}
+.main .block__body.awards .awards__item-number {
+  flex: 0 0 auto;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e94d35;
+  color: #fff;
+}
+.main .block__body.awards .awards__item-title {
+  font-size: 24px;
+}
+@media (max-width: 767px) {
+  .main .block__body.awards .awards__item-title {
+    font-size: 20px;
+  }
+}
+.main .block__body.awards .awards__item-subtitle {
+  font-size: 18px;
+}
+@media (max-width: 767px) {
+  .main .block__body.awards .awards__item-subtitle {
+    font-size: 16px;
+  }
+}
+.main .block__body.awards .awards__item:hover {
+  box-shadow: 0 0 20px #e94d35 inset;
+}
+.main .block__body.portfolio {
+  max-width: 100%;
+  gap: 90px;
+}
+.main .block__body.portfolio .portfolio__row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+}
+.main .block__body.portfolio .portfolio__row.img-right {
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+@media (max-width: 991px) {
+  .main .block__body.portfolio .portfolio__row {
+    flex-direction: column-reverse !important;
+  }
+}
+.main .block__body.portfolio .portfolio__col {
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 510px;
+  width: 100%;
+  min-width: 100px;
+}
+.main .block__body.portfolio .portfolio__col.img {
+  flex: 0 1 auto;
+  width: 460px;
+  height: 300px;
+  overflow: hidden;
+}
+.main .block__body.portfolio .portfolio__col.img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (max-width: 991px) {
+  .main .block__body.portfolio .portfolio__col.img {
+    width: 100% !important;
+    height: inherit;
+    max-width: 450px !important;
+    flex: 1 1 auto;
+    width: 90vw;
+  }
+}
+@media (max-width: 991px) {
+  .main .block__body.portfolio .portfolio__col {
+    align-items: center;
+    max-width: none;
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.main .block__body.portfolio .portfolio__class {
+  padding: 5px 10px;
+  background-color: #e94d35;
+  text-transform: uppercase;
+  color: #fff;
+  display: inline-block;
+}
+.main .block__body.portfolio .portfolio__title {
+  font-size: 45px;
+  line-height: 56px;
+  letter-spacing: 1.44px;
+  margin: 20px 0 40px 0;
+}
+@media (max-width: 991px) {
+  .main .block__body.portfolio .portfolio__title {
+    text-align: center;
+  }
+}
+@media (max-width: 575px) {
+  .main .block__body.portfolio .portfolio__title {
+    font-size: 36px;
+  }
+}
+.main .block__body.services {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.main .block__body.services .services__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 25px;
+  flex: 0 1 auto;
+  max-width: 600px;
+  width: 100%;
+  padding: 35px;
+  border: 1px solid #161513;
+  transition: 0.1s all ease-in-out;
+}
+.main .block__body.services .services__item:hover {
+  box-shadow: 0 0 20px #e94d35 inset;
+}
+.main .block__body.services .services__title {
+  font-size: 30px;
+  line-height: 40px;
+  letter-spacing: 0.64px;
+}
+.main .block__body.services .services__body {
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 0.64px;
+}
+@media (max-width: 767px) {
+  .main .block__body.services .services__body {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+.main .block__body.customers {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.main .block__body.customers .customers__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  flex: 0 1 auto;
+  max-width: 240px;
+  width: 100%;
+  padding: 35px;
+  border: 1px solid #161513;
+  transition: 0.1s all ease-in-out;
+}
+.main .block__body.customers .customers__item:hover {
+  box-shadow: 0 0 20px #e94d35 inset;
+}
+.main .block__body.articles {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 100px;
+  width: 100%;
+  position: relative;
+}
+.main .block__body.articles .articles__row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px 60px;
+  width: 100%;
+  padding: 10px 30px;
+  border: 1px solid #161513;
+  transition: 0.2s all ease-in-out;
+}
+.main .block__body.articles .articles__row:hover {
+  box-shadow: 0 0 15px #e94d35 inset;
+}
+@media (max-width: 991px) {
+  .main .block__body.articles .articles__row {
+    flex-direction: column;
+  }
+}
+.main .block__body.articles .articles__col {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  max-width: 500px;
+  line-height: 24px;
+}
+.main .block__body.articles .articles__col.left {
+  flex: 1 0 auto;
+}
+.main .block__body.articles .articles__design-date {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  color: #e94d35;
+  gap: 15px;
+}
+@media (max-width: 575px) {
+  .main .block__body.articles .articles__design-date {
+    gap: 5px;
+    font-size: 0.8em;
+  }
+}
+.main .block__body.articles .articles__item {
+  text-transform: uppercase;
+}
+.main .block__body.articles .articles__title {
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.48px;
+}
+@media (max-width: 991px) {
+  .main .block__body.articles .articles__title {
+    flex-direction: column;
+  }
+}
+.main .block__body.articles .articles__button {
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #161513;
+  color: #fff;
+  transition: 0.3s all ease-in-out;
+  min-height: 60px;
+  border: none;
+}
+.main .block__body.articles .articles__button:hover {
+  background-color: #e94d35;
+}
+.main .block.subscribe {
+  min-height: 180px;
+  background-color: #e6e3de;
+}
+.main .block.subscribe .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 180px;
+  padding: 15px 0;
+}
+@media (max-width: 767px) {
+  .main .block.subscribe .container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.main .block.subscribe .subscribe__col {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px 25px;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.48px;
+  transition: 0.3s all ease-in-out;
+}
+.main .block.subscribe .subscribe__col input[type=text] {
+  border: 1px solid #161513;
+  flex: 0 0 auto;
+  background-color: transparent;
+  height: 56px;
+  padding: 0 15px;
+  max-width: 350px;
+  width: 100%;
+}
+.main .block.subscribe .subscribe__col input[type=text]:focus {
+  outline: none;
+}
+.main .block.subscribe .subscribe__col input[type=text]:focus::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.1333333333);
+}
+.main .block.subscribe .subscribe__col input[type=text]:focus::placeholder {
+  color: rgba(0, 0, 0, 0.1333333333);
+}
+.main .block.subscribe .subscribe__col input[type=text]::-moz-placeholder {
+  -moz-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  color: #161513;
+}
+.main .block.subscribe .subscribe__col input[type=text]::placeholder {
+  transition: 0.3s all ease-in-out;
+  color: #161513;
+}
+@media (max-width: 767px) {
+  .main .block.subscribe .subscribe__col input[type=text] {
+    flex: 0 1 auto;
+    max-width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .main .block.subscribe .subscribe__col {
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 15px;
+  }
+}
+.main .block.subscribe .subscribe__btn {
+  border: none;
+  background-color: #161513;
+  color: #fff;
+  height: 56px;
+  padding: 0 15px;
+  transition: 0.3s all ease-in-out;
+}
+.main .block.subscribe .subscribe__btn:hover {
+  background-color: #e94d35;
+}
+@media (max-width: 767px) {
+  .main .block.subscribe .subscribe__btn {
+    width: 100%;
+  }
+}
+.main .block.articles {
+  overflow: hidden;
+  position: relative;
+}
+.main .block .articles__star {
+  position: absolute;
+  bottom: 250px;
+  right: -130px;
+  width: 240px;
+  height: 240px;
+  z-index: -1;
+}
+.main .block .articles__star img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 767px) {
+  .main .block .articles__star {
+    display: none;
+  }
 }
