--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -74,6 +74,15 @@ body._active {
   min-width: 100%;
 }
 
+*.hidden {
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+*.visible {
+  opacity: 1 !important;
+}
+
 .header {
   min-height: 96px;
   transition: 0.3s background-color, color ease-in-out;
