--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -665,6 +665,10 @@ body._active {
 .main .portfolio-next__subtitle {
   text-transform: uppercase;
 }
+.main .block {
+  position: relative;
+  overflow-x: hidden;
+}
 .main .block .container {
   display: flex;
   flex-direction: column;
@@ -1023,7 +1027,7 @@ body._active {
   min-height: 180px;
   padding: 15px 0;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .main .block.subscribe .container {
     flex-direction: column;
     align-items: center;
@@ -1041,7 +1045,7 @@ body._active {
 }
 .main .block.subscribe .subscribe__col input[type=text] {
   border: 1px solid #161513;
-  flex: 0 0 auto;
+  flex: 0 1 auto;
   background-color: transparent;
   height: 56px;
   padding: 0 15px;
@@ -1066,13 +1070,13 @@ body._active {
   transition: 0.3s all ease-in-out;
   color: #161513;
 }
-@media (max-width: 767px) {
+@media (max-width: 1199px) {
   .main .block.subscribe .subscribe__col input[type=text] {
     flex: 0 1 auto;
     max-width: 100%;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 1199px) {
   .main .block.subscribe .subscribe__col {
     flex-wrap: wrap;
     align-items: center;
@@ -1090,7 +1094,7 @@ body._active {
 .main .block.subscribe .subscribe__btn:hover {
   background-color: #e94d35;
 }
-@media (max-width: 767px) {
+@media (max-width: 1199px) {
   .main .block.subscribe .subscribe__btn {
     width: 100%;
   }
