--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -574,6 +574,17 @@ body._active {
     line-height: 54px;
   }
 }
+@media (max-width: 575px) {
+  .main .portfolio__heading-title {
+    font-size: 30px;
+    line-height: 42px;
+  }
+}
+@media (max-width: 767px) {
+  .main .portfolio__heading-subtitle {
+    font-size: 0.9em;
+  }
+}
 .main .portfolio__body {
   display: flex;
   flex-direction: column;
@@ -597,6 +608,12 @@ body._active {
     line-height: 32px;
   }
 }
+@media (max-width: 575px) {
+  .main .portfolio__body-title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
 .main .portfolio__body-subtitle {
   font-size: 18px;
   line-height: 32px;
@@ -606,6 +623,7 @@ body._active {
   .main .portfolio__body-subtitle {
     font-size: 16px;
     line-height: 28px;
+    margin: 20px 0 15px 0 !important;
   }
 }
 .main .portfolio__body-info {
@@ -816,6 +834,11 @@ body._active {
   max-width: 100%;
   gap: 90px;
 }
+@media (max-width: 767px) {
+  .main .block__body.portfolio {
+    gap: 40px;
+  }
+}
 .main .block__body.portfolio .portfolio__row {
   display: flex;
   flex-direction: row;
@@ -831,6 +854,7 @@ body._active {
 @media (max-width: 991px) {
   .main .block__body.portfolio .portfolio__row {
     flex-direction: column-reverse !important;
+    gap: 10px;
   }
 }
 .main .block__body.portfolio .portfolio__col {
@@ -893,7 +917,9 @@ body._active {
 }
 @media (max-width: 575px) {
   .main .block__body.portfolio .portfolio__title {
-    font-size: 36px;
+    font-size: 30px;
+    line-height: 42px;
+    margin: 15px 0 20px 0;
   }
 }
 .main .block__body.services {
